3.0.2 - 2023-03-17
- Sélection de dates multiples fixé

3.0.1 - 2023-03-01
- Ajout de l'app Nyon-Marens qui contient un formulaire d'annonce de cas.
- Fixes diverses python3

3.0.0 - 2023-03-01
- Passage à python3
- Passage à django 3.2

1.0.2 - 12.10.2022
Envoi d'emails lors de la bascule d'un élève de la liste d'attente.

1.0.1 - 15.6.2020
Administration
- Possibilité de supprimer des utilisateurs
- Edition des textes des pages statiques (accueil, règlement, protection des données)
- Ajout d'un champ "Remarques" pour les cours
- Suppression des questions complémentaires si la fonctionnalité n'est pas utilisée


1.0.0 - 12.6.2020
Administration:
- Statistiques de provenance des familles / enfants
- Amélioration de la page d'accueil de l'administrateur si la période d'inscription est relativement longue (> 45 jours)

Inscription:
- Après la création d'une nouvelle période d'inscription, et si les enfants ont été recopiés depuis la précédente,
le système invite les parents lorsqu'ils se connectent à vérifier les données des enfants (via une notification).
