@@ -1,0 +1,26 @@
+# Generated by Django 3.2.16 on 2023-03-21 05:28
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('payroll', '0005_alter_payroll_exported_by'),
+        ('profiles', '0020_alter_familyuser_permit_type'),
+        ('activities', '0020_alter_activity_allocation_account'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='course',
+            name='local_city_override',
+            field=models.ManyToManyField(blank=True, to='profiles.City', verbose_name='Local city override'),
+        ),
+        migrations.AlterField(
+            model_name='coursesinstructors',
+            name='function',
+            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='payroll.function'),
+        ),
+    ]
