@@ -90,6 +90,8 @@ class CourseCreateView(SuccessMessageMixin, BackendMixin, CreateView):
         self.object = form.save()
         for extra in form.cleaned_data["extra"]:
             self.object.extra.add(extra)
+        for city in form.cleaned_data["local_city_override"]:
+            self.object.local_city_override.add(city)
         return HttpResponseRedirect(self.get_success_url())
 
 
@@ -164,6 +166,12 @@ class CourseUpdateView(SuccessMessageMixin, BackendMixin, UpdateView):
             course.extra.remove(removed_extra)
         for extra in form.cleaned_data["extra"]:
             course.extra.add(extra)
+
+        removed_cities = set(course.local_city_override.all()) - set(form.cleaned_data["local_city_override"])
+        for removed_city in removed_cities:
+            course.local_city_override.remove(removed_city)
+        for city in form.cleaned_data["local_city_override"]:
+            course.local_city_override.add(city)
         return response
 
 
