@@ -1,0 +1,18 @@
+# Generated by Django 3.2.16 on 2023-03-21 05:28
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('payments', '0006_alter_datatranstransaction_payment_method'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='datatranstransaction',
+            name='webhook',
+            field=models.JSONField(blank=True, null=True),
+        ),
+    ]
